# rust_project

duerp-api/: Cargo.toml  package-lock.json  rustc-ice-2025-12-03T05_05_00-197331.txt  rustc-ice-2025-12-03T05_13_12-198097.txt
duerp-api/sp/: call_fun  course_operation_single_info  get_attendance_by_coId_date  get_attendance_class_list_coId_date  get_attendance_master_info  get_attendance_master_info_by_coid_date  lecture_get_course_operation_id  save_attendance  store_lecture_fn  update_attendance  update_routine
duerp-api/src/: main.rs
duerp-api/src/middleware/: jwt_middleware.rs
duerp-api/src/models/: auth.rs  mod.rs  model_attendance.rs  model_class.rs  model_course.rs  user.rs
duerp-api/src/routes/: attendance.rs  attendance_routes.rs  auth.rs  class.rs  course.rs  course_routes.rs  department_routes.rs  mod.rs  program_routes.rs
duerp-api/src/utils/: constants.rs  date_utils.rs  db.rs  hash.rs  jwt.rs  mod.rs
duerp-ui/: package-lock.json  package.json
duerp-ui/src/: App.tsx  index.css  main.tsx
duerp-ui/src/api/: index.ts
duerp-ui/src/components/auth/: SignInForm.tsx  SignInWithGoogle.tsx  SignUpForm.tsx
duerp-ui/src/components/course/: CourseRecord.tsx
duerp-ui/src/components/ecommerce/: EcommerceMetrics.tsx
duerp-ui/src/context/: AuthContext.tsx
duerp-ui/src/layout/: AppHeader.tsx  AppSidebar.tsx
duerp-ui/src/pages/: Blank.tsx  UserProfiles.tsx
duerp-ui/src/routes/: ProtectedRoute.tsx  PublicRoute.tsx
duerp-ui/src/schemas/: login.schema.ts
rust-ssl-api/: .env  Cargo.toml
rust-ssl-api/src/: main.rs
(+28 files in other folders)
