[package]
name = "attendance-system"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
local-ip-address = "0.6"
uuid = { version = "1", features = ["serde", "v4"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "mysql", "macros", "uuid", "chrono", "migrate", "json"] }
bcrypt = "0.15"
anyhow = "1"
actix-cors = "0.7"
reqwest = { version = "0.12", features = ["json"] }

# Validator
validator = { version = "0.20", features = ["derive"] }
actix-web-httpauth = "0.6"
async-trait = "0.1"

thiserror = "2.0.16"
env_logger = "0.11.8"
log = "0.4.27"

jsonwebtoken = "9.3"
futures-util = "0.3.31"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.12.0"
actix-service = "2.0.0"